# Triangle

./: CMakeLists.txt  README.md  main.cpp
include/: api.hpp  config.hpp  window.hpp
src/: api.cpp  window.cpp
